fixed center text alignment in explore mode

--- a/main.css
+++ b/main.css
@@ -79,18 +79,17 @@
       cursor: pointer;
   }
   
-  .buildMode .selectedCircle {
+  .buildMode .selectedCircle,
+  .exploreMode .selectedCircle {
       fill: #0097FF;
   }
   
-  .exploreMode .selectedCircle,
   .reportMode .selectedCircle {
       fill: #ffffff;
       stroke-width: 1px;
       stroke: rgba(0, 0, 0, 0.1);
   }
   
-  .exploreMode .selectedCircle+text#abbr,
   .reportMode .selectedCircle+text#abbr {
       fill: #4A4A4A !important;
   }
